--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -27,5 +27,4 @@ EXPOSE 3000
 ENV NODE_ENV=production
 
 # Comando para iniciar o servidor
-CMD ["npm", "run", "start"]
-#CMD ["node", "dist/server/index.js"]
+CMD ["node", "dist/server/index.js"]
