--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,6 +18,8 @@ steps:
       - --region=us-central1
       - --platform=managed
       - --allow-unauthenticated
+      - --vpc-connector=metas-landpage
+      - --vpc-egress=all
       - --port=3000
 
 options:
